<resources>
    <string name="app_name">SportDiary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sport_floating_button_description">Добавление тренировки</string>
    <string name="add_date_hint">Дата</string>
    <string name="add_time_hint">Время</string>
    <string name="add_training_type_hint">Тип тренировки</string>
    <string name="add_used_calories_hint">Потраченные калории</string>
    <string name="add_button_text">Добавить</string>
    <string name="update_button_text">Обновить</string>
    <string name="add_protein_hint">Белки</string>
    <string name="add_fat_hint">Жиры</string>
    <string name="add_carb_hint">Углеводы</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>