<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.screens.app.sport.update.SportUpdateFragment">

    <EditText
        android:id="@+id/update_date"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:hint="@string/add_date_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_time"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_time_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_date" />

    <EditText
        android:id="@+id/update_training_type"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_training_type_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_time" />

    <EditText
        android:id="@+id/update_used_calories"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/add_used_calories_hint"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_training_type" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/update_button_text"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_used_calories" />

</androidx.constraintlayout.widget.ConstraintLayout>